gccida/c3/ix86_expand_int_movcc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8530:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+164h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8535:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code compare_code; // [rsp+188h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8536:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+18Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8558:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8558:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8573:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
ct.rtwint = ( __int64)operandsa[2]->fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8574:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
cf_0.rtwint = ( __int64)operandsa[3]->fld[0]; 
                        ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8580:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
ct.rtwint = ( __int64)operandsa[3]->fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8634:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
ct.rtwint = ( __int64)operandsa[3]->fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8635:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
cf_0.rtwint = ( __int64)operandsa[2]->fld[0]; 
                        ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8637:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8638:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8639:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8766:12: error: expected identifier or '('
 struct op = optab_table[19]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8771:12: error: expected identifier or '('
 struct op = optab_table[18]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8784:12: error: expected identifier or '('
 struct op = optab_table[19]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8789:12: error: expected identifier or '('
 struct op = optab_table[18]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8814:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/i386.c:8815:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)ix86_compare_op0)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_int_movcc/src/obj/i386.o] Error 1
